기본 컴포넌트 추가

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>검색을 하세요 검색을</title>
 </head>
 <body>
-    
+    <link rel="stylesheet" href="style.css">
+    <form action="" id="search">
+        <span class="logo"></span>
+        <input type="text" name="query" id="search_query">
+        <input type="submit" value="검색">
+    </form>
 </body>
 </html>
