--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>무엇이든 알려드립니다</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style.css?3">
+    <link rel="stylesheet" href="style.css?4">
     <h1 class="title">무엇이든 알려드립니다</h1>
     <form action="" id="search">
         <input type="text" name="query" id="query_input"/>
         <p id="search_query"><span id="query_string"></span><span id="query_cursor"></span></p>
         <button type="submit">
-            <span class="touch_do_this"><img src="keyboard_arrow_up-black-18dp.svg" alt="^"/><br/>누르세요</span>
+            <span class="touch_do_this"><span><img src="keyboard_arrow_up-black-18dp.svg" alt="^"/><br/>누르세요</span></span>
             <div class="touch_this"></div>
         </button>
     </form>
