구글 애널리틱스 삽입

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Please remove this script when you clone or fork this repository!!!! -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3NEDZW60MW"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3NEDZW60MW');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>무엇이든 알려드립니다</title>
